learn from NCCU Moocs

--- a/Deep Learning/week5_2_practice_transfer_learning_cnn_hand_write.ipynb
+++ b/Deep Learning/week5_2_practice_transfer_learning_cnn_hand_write.ipynb
@@ -293,43 +293,281 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. 保留前三層 convolutional layer 並進行轉移學習\n",
+    "\n",
+    "將 MNIST 資料及僅有 0, 1 的部分取出來，希望透過轉移學習建立一個類似 LeNet-5 的 0, 1 圖形辨識模型\n",
+    "將下列三個 **None** 的部分進行修改，以轉移學習建立新的模型"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/john.tung/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
-      "  return f(*args, **kwds)\n",
-      "/Users/john.tung/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
-      "  return f(*args, **kwds)\n",
-      "/Users/john.tung/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
-      "  return f(*args, **kwds)\n",
-      "/Users/john.tung/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
-      "  return f(*args, **kwds)\n",
-      "/Users/john.tung/anaconda3/lib/python3.7/importlib/_bootstrap.py:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "You are trying to load a weight file containing 3 layers into a model with 5 layers.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-91c84f4f4393>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_weights\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'handwriteing_model_weights.h5'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/keras/engine/saving.py\u001b[0m in \u001b[0;36mload_wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    490\u001b[0m                 \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtmp_filepath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    491\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 492\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mload_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    493\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    494\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mload_wrapper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/keras/engine/network.py\u001b[0m in \u001b[0;36mload_weights\u001b[0;34m(self, filepath, by_name, skip_mismatch, reshape)\u001b[0m\n\u001b[1;32m   1228\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1229\u001b[0m                 saving.load_weights_from_hdf5_group(\n\u001b[0;32m-> 1230\u001b[0;31m                     f, self.layers, reshape=reshape)\n\u001b[0m\u001b[1;32m   1231\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'close'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1232\u001b[0m                 \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/keras/engine/saving.py\u001b[0m in \u001b[0;36mload_weights_from_hdf5_group\u001b[0;34m(f, layers, reshape)\u001b[0m\n\u001b[1;32m   1207\u001b[0m                          \u001b[0;34m'containing '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlayer_names\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1208\u001b[0m                          \u001b[0;34m' layers into a model with '\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1209\u001b[0;31m                          str(len(filtered_layers)) + ' layers.')\n\u001b[0m\u001b[1;32m   1210\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1211\u001b[0m     \u001b[0;31m# We batch weight value assignments in a single backend call\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: You are trying to load a weight file containing 3 layers into a model with 5 layers."
+      "Model: \"sequential_3\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_1 (Conv2D)            (None, 28, 28, 32)        320       \n",
+      "_________________________________________________________________\n",
+      "activation_1 (Activation)    (None, 28, 28, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_1 (MaxPooling2 (None, 14, 14, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_2 (Conv2D)            (None, 14, 14, 64)        18496     \n",
+      "_________________________________________________________________\n",
+      "activation_2 (Activation)    (None, 14, 14, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_2 (MaxPooling2 (None, 7, 7, 64)          0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_3 (Conv2D)            (None, 7, 7, 128)         73856     \n",
+      "_________________________________________________________________\n",
+      "activation_3 (Activation)    (None, 7, 7, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_3 (MaxPooling2 (None, 3, 3, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "flatten_6 (Flatten)          (None, 1152)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_9 (Dense)              (None, 100)               115300    \n",
+      "_________________________________________________________________\n",
+      "activation_12 (Activation)   (None, 100)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_10 (Dense)             (None, 2)                 202       \n",
+      "_________________________________________________________________\n",
+      "activation_13 (Activation)   (None, 2)                 0         \n",
+      "=================================================================\n",
+      "Total params: 208,174\n",
+      "Trainable params: 115,502\n",
+      "Non-trainable params: 92,672\n",
+      "_________________________________________________________________\n"
      ]
     }
    ],
    "source": [
-    "model.load_weights('handwriteing_model_weights.h5')"
+    "new_fc_layer = [Flatten(),\n",
+    "               # Design your own fully connected structures\n",
+    "               Dense(100),\n",
+    "               Activation('relu'),\n",
+    "               Dense(2), # Hint: how many classes in new dataset?\n",
+    "               # Remember put currect number of unit for output\n",
+    "               Activation('softmax')]\n",
+    "\n",
+    "model_0_to_1 = Sequential(conv_layer + new_fc_layer)\n",
+    "model_0_to_1.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "將下列的 **None** 進行修改，將借來的神經網路**冷凍**起來："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for layer in conv_layer:\n",
+    "    layer.trainable = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "冷凍後神經網路的 summary 會有些變化"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_3\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_1 (Conv2D)            (None, 28, 28, 32)        320       \n",
+      "_________________________________________________________________\n",
+      "activation_1 (Activation)    (None, 28, 28, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_1 (MaxPooling2 (None, 14, 14, 32)        0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_2 (Conv2D)            (None, 14, 14, 64)        18496     \n",
+      "_________________________________________________________________\n",
+      "activation_2 (Activation)    (None, 14, 14, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_2 (MaxPooling2 (None, 7, 7, 64)          0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_3 (Conv2D)            (None, 7, 7, 128)         73856     \n",
+      "_________________________________________________________________\n",
+      "activation_3 (Activation)    (None, 7, 7, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_3 (MaxPooling2 (None, 3, 3, 128)         0         \n",
+      "_________________________________________________________________\n",
+      "flatten_6 (Flatten)          (None, 1152)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_9 (Dense)              (None, 100)               115300    \n",
+      "_________________________________________________________________\n",
+      "activation_12 (Activation)   (None, 100)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_10 (Dense)             (None, 2)                 202       \n",
+      "_________________________________________________________________\n",
+      "activation_13 (Activation)   (None, 2)                 0         \n",
+      "=================================================================\n",
+      "Total params: 300,846\n",
+      "Trainable params: 208,174\n",
+      "Non-trainable params: 92,672\n",
+      "_________________________________________________________________\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/john.tung/anaconda3/lib/python3.7/site-packages/keras/engine/training.py:297: UserWarning: Discrepancy between trainable weights and collected trainable weights, did you set `model.trainable` without calling `model.compile` after ?\n",
+      "  'Discrepancy between trainable weights and collected trainable'\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_0_to_1.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "接著訓練有部分架構跟別人借的 0, 1 手寫辨識模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_0_to_1.compile(loss='mse', optimizer=SGD(lr=0.1), metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. 訓練"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((12665, 28, 28, 1), (12665, 2))"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train_01.shape, y_train_01.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "12665/12665 [==============================] - 8s 648us/step - loss: 0.5323 - accuracy: 0.4677\n",
+      "Epoch 2/5\n",
+      "12665/12665 [==============================] - 8s 651us/step - loss: 0.5323 - accuracy: 0.4677\n",
+      "Epoch 3/5\n",
+      "12665/12665 [==============================] - 9s 706us/step - loss: 0.5323 - accuracy: 0.4677\n",
+      "Epoch 4/5\n",
+      "12665/12665 [==============================] - 8s 655us/step - loss: 0.5323 - accuracy: 0.4677\n",
+      "Epoch 5/5\n",
+      "12665/12665 [==============================] - 8s 665us/step - loss: 0.5323 - accuracy: 0.4677\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.callbacks.History at 0x1a53f4bcd0>"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_0_to_1.fit(x_train_01, y_train_01, batch_size=100, epochs=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2115/2115 [==============================] - 2s 854us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = model_0_to_1.evaluate(x_test_01, y_test_01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "測試資料的 loss： 0.53664302603291\n",
+      "測試資料的正確率： 0.46335697174072266\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('測試資料的 loss：', score[0])\n",
+    "print('測試資料的正確率：', score[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. 第二個轉移學習得到的神經網路\n",
+    "如果模型大部分的權重已經訓練好並冷凍起來，轉移學習可以大幅減少訓練時間且訓練會更快收斂"
    ]
   },
   {
