--- a/Kaggle/Titanic/Titanic.ipynb
+++ b/Kaggle/Titanic/Titanic.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 參考文章：[Kaggle競賽-鐵達尼號生存預測(Top 3%)](https://medium.com/@yulongtsai/https-medium-com-yulongtsai-titanic-top3-8e64741cc11f)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -972,20 +979,32 @@
     "df_5 = pd.crosstab(data_df['FareBin_Code_5'],data_df['Pclass'])\n",
     "df_6 = pd.crosstab(data_df['FareBin_Code_6'],data_df['Pclass'])\n",
     "\n",
-    "display_side_by_side(df_4,df_5,df_6)\n",
+    "display_side_by_side(df_4, df_5, df_6)\n",
     "\n",
     "# plots\n",
-    "# fig, [ax1, ax2, ax3] = plt.subplots(1, 3,sharey=True)\n",
+    "# fig, [ax1, ax2, ax3] = plt.subplots(1, 3, sharey=True)\n",
     "# fig.set_figwidth(18)\n",
     "for axi in [ax1, ax2, ax3]:\n",
-    "    axi.axhline(0.5,linestyle='dashed', c='black',alpha = .3)\n",
+    "    axi.axhline(0.5, linestyle='dashed', c='black', alpha = .3)\n",
     "g1 = sns.factorplot(x='FareBin_Code_4', y=\"Survived\", data=data_df,kind='bar',ax=ax1)\n",
     "g2 = sns.factorplot(x='FareBin_Code_5', y=\"Survived\", data=data_df,kind='bar',ax=ax2)\n",
     "g3 = sns.factorplot(x='FareBin_Code_6', y=\"Survived\", data=data_df,kind='bar',ax=ax3)\n",
+    "\n",
     "# close FacetGrid object\n",
     "# plt.close(g1.fig)\n",
     "# plt.close(g2.fig)\n",
     "# plt.close(g3.fig)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pandas 中提供了蠻多種切分數值特徵的方式，這裡選用 qcut，qcut 是以累積百分比來切分的\n",
+    "\n",
+    "例如將副指令 = 4，就會以 0% ~ 25%, 25% ~ 50%, 50% ~ 75%, 75% ~ 100% 來切分資料\n",
+    "\n",
+    "好處是我們可以避免某個區間內的資料過少(skew problem)"
    ]
   },
   {
@@ -1018,6 +1037,201 @@
     "\n",
     "# show columns\n",
     "X.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Ticket</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Embarked</th>\n",
+       "      <th>Sex_Code</th>\n",
+       "      <th>Log_Fare</th>\n",
+       "      <th>FareBin_4</th>\n",
+       "      <th>FareBin_5</th>\n",
+       "      <th>FareBin_6</th>\n",
+       "      <th>FareBin_Code_4</th>\n",
+       "      <th>FareBin_Code_5</th>\n",
+       "      <th>FareBin_Code_6</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>A/5 21171</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.916454</td>\n",
+       "      <td>(-0.001, 7.896]</td>\n",
+       "      <td>(-0.001, 7.854]</td>\n",
+       "      <td>(-0.001, 7.775]</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>female</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>PC 17599</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>C85</td>\n",
+       "      <td>C</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.859038</td>\n",
+       "      <td>(31.275, 512.329]</td>\n",
+       "      <td>(41.579, 512.329]</td>\n",
+       "      <td>(53.1, 512.329]</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>female</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>STON/O2. 3101282</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.950608</td>\n",
+       "      <td>(7.896, 14.454]</td>\n",
+       "      <td>(7.854, 10.5]</td>\n",
+       "      <td>(7.775, 8.662]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>113803</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>C123</td>\n",
+       "      <td>S</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.733197</td>\n",
+       "      <td>(31.275, 512.329]</td>\n",
+       "      <td>(41.579, 512.329]</td>\n",
+       "      <td>(26.0, 53.1]</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
+       "      <td>male</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>373450</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>S</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.956649</td>\n",
+       "      <td>(7.896, 14.454]</td>\n",
+       "      <td>(7.854, 10.5]</td>\n",
+       "      <td>(7.775, 8.662]</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Pclass                                               Name     Sex   Age  \\\n",
+       "0       3                            Braund, Mr. Owen Harris    male  22.0   \n",
+       "1       1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0   \n",
+       "2       3                             Heikkinen, Miss. Laina  female  26.0   \n",
+       "3       1       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0   \n",
+       "4       3                           Allen, Mr. William Henry    male  35.0   \n",
+       "\n",
+       "   SibSp  Parch            Ticket     Fare Cabin Embarked  Sex_Code  Log_Fare  \\\n",
+       "0      1      0         A/5 21171   7.2500   NaN        S         1  0.916454   \n",
+       "1      1      0          PC 17599  71.2833   C85        C         0  1.859038   \n",
+       "2      0      0  STON/O2. 3101282   7.9250   NaN        S         0  0.950608   \n",
+       "3      1      0            113803  53.1000  C123        S         0  1.733197   \n",
+       "4      0      0            373450   8.0500   NaN        S         1  0.956649   \n",
+       "\n",
+       "           FareBin_4          FareBin_5        FareBin_6  FareBin_Code_4  \\\n",
+       "0    (-0.001, 7.896]    (-0.001, 7.854]  (-0.001, 7.775]               0   \n",
+       "1  (31.275, 512.329]  (41.579, 512.329]  (53.1, 512.329]               3   \n",
+       "2    (7.896, 14.454]      (7.854, 10.5]   (7.775, 8.662]               1   \n",
+       "3  (31.275, 512.329]  (41.579, 512.329]     (26.0, 53.1]               3   \n",
+       "4    (7.896, 14.454]      (7.854, 10.5]   (7.775, 8.662]               1   \n",
+       "\n",
+       "   FareBin_Code_5  FareBin_Code_6  \n",
+       "0               0               0  \n",
+       "1               4               5  \n",
+       "2               1               1  \n",
+       "3               4               4  \n",
+       "4               1               1  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.head()"
    ]
   },
   {
