same question extend get max num

--- a/students_QA/find_min_num.ipynb
+++ b/students_QA/find_min_num.ipynb
@@ -78,6 +78,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 反過來，找出輸入值中的最大值\n",
+    "撰寫程式，讓使用者輸入數字，直到使用者輸入 9999 作為結束為止，排除 9999 印出輸入中的最大值"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入數字，數字為 9999 時停止：9998\n",
+      "請輸入數字，數字為 9999 時停止：9310\n",
+      "請輸入數字，數字為 9999 時停止：1234\n",
+      "請輸入數字，數字為 9999 時停止：1509\n",
+      "請輸入數字，數字為 9999 時停止：9487\n",
+      "請輸入數字，數字為 9999 時停止：2345\n",
+      "請輸入數字，數字為 9999 時停止：9999\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input('請輸入數字，數字為 9999 時停止：'))\n",
+    "\n",
+    "a_list = []\n",
+    "a_list.append(a)\n",
+    "\n",
+    "while a != 9999:\n",
+    "    a = int(input('請輸入數字，數字為 9999 時停止：'))\n",
+    "    a_list.append(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9998, 9310, 1234, 1509, 9487, 2345, 9999]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_list.remove(9999)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9998, 9310, 1234, 1509, 9487, 2345]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9998"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(a_list)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
